# python_hws

hw_1/: pyproject.toml  requirements.txt
hw_1/artifacts/: nl_output.md  tail_output.md  wc_output.md
hw_1/src/hw_1/nl/: __main__.py
hw_1/src/hw_1/tail/: __main__.py
hw_1/src/hw_1/wc/: __main__.py
hw_2/: Dockerfile  pyproject.toml
hw_2/artifacts/1/: example.tex
hw_2/artifacts/2/: readme.md
hw_2/artifacts/3/: readme.md
hw_2/src/hw_2/tex/: __main__.py  tools.py
hw_3/: pyproject.toml
hw_3/artifacts/3.1/: matrix*.txt  matrix@.txt
hw_3/artifacts/3.2/: matrix+.txt  other_ops.txt
hw_3/artifacts/3.3/: A.txt  AB.txt  C.txt  CD.txt  D.txt  hash.txt
hw_3/src/hw_3/: __main__.py  matrix.py  matrix_mixin.py
hw_3/tests/: test_matrix.py
hw_4/: pyproject.toml
hw_4/aritfacts/: 1.txt  3.txt
hw_4/aritfacts/2/: log.txt  time.txt
hw_4/src/hw_4/: measure.py
hw_4/src/hw_4/fib/: __main__.py
hw_4/src/hw_4/integrate/: __main__.py  logging.py
hw_4/src/hw_4/pipe/: __main__.py
hw_5/: pyproject.toml
hw_5/artifacts/1/: readme.txt
hw_5/src/hw_5/imageloader/: __main__.py
