[project]
name = "shushakov_hw_2"
version = "0.1.1"
description = ""
authors = [
    {name = "Daniil Shushakov", email = "4shushakov@gmail.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
