[project]
name = "hw_4"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Daniil Shushakov", email = "4shushakov@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.ruff]
line-length = 120